src/test/deca/syntax/invalid/resultats/test4_comment-synt.res
./src/test/deca/syntax/invalid/test4_comment.deca:16:2: mismatched input '/' expecting {INT, '-', 'false', 'if', 'new', 'null', 'readInt', 'readFloat', 'print', 'println', 'printlnx', 'printx', 'return', 'this', 'true', 'while', IDENT, '(', '}', '!', ';', FLOAT, STRING}
